--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
       </div>
     </nav>
 
+    <section class="container-fluid px=0">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div class="text-white text-center d-none d-lg-block" id="title-head">
+            <h1>Museum Of Dino</h1>
+            <h1>Museum Of Dino</h1>
+            <h1>Museum Of Dino</h1>
+            <h1>Museum Of Dino</h1>
+            <h1>Museum Of Dino</h1>
+            <h1>Museum Of Dino</h1>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img class="img-fluid" src="images/museum-build.jpg" alt="" srcset="" />
+        </div>
+      </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   </body>
