--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" id="navbar">
+    <nav class="navbar fixed-top navbar-expand-lg" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">MUSEUM</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
     </nav>
 
     <section class="container-fluid px=0">
-      <div class="row align-items-center">
+      <div class="row align-items-center content" id="home">
         <div class="col-lg-6">
           <div class="text-white text-center d-none d-lg-block" id="title-head">
             <h1>Museum Of Dino</h1>
@@ -39,13 +39,56 @@
             <h1>Museum Of Dino</h1>
           </div>
         </div>
+
         <div class="col-lg-6">
           <img class="img-fluid" src="images/museum-build.jpg" alt="" srcset="" />
+        </div>
+      </div>
+
+      <div class="row align-items-center content" id="ticket">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="images/dino1.jpg" alt="" class="img-fluid" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb pt-3">
+              <h2>Museum of Ark</h2>
+              <img src="images/dino-head.jpg" alt="" height="60" class="d-none d-lg-inline" />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit temporibus, assumenda voluptatibus dicta esse quos quasi, tenetur aspernatur incidunt officiis odit unde amet qui vel beatae debitis sequi magni inventore.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row align-items-center content" id="about">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="images/dino2.jpg" alt="" class="img-fluid" />
+        </div>
+        <div class="col-md-6 text-center">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb pt-3">
+              <h2>Museum of Ark</h2>
+              <img src="images/dino-head.jpg" alt="" height="60" class="d-none d-lg-inline" />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit temporibus, assumenda voluptatibus dicta esse quos quasi, tenetur aspernatur incidunt officiis odit unde amet qui vel beatae debitis sequi magni inventore.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script>
+      $(function () {
+        $(document).scroll(function () {
+          let $nav = $("#navbar");
+          $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+        });
+      });
+    </script>
   </body>
 </html>
